Fixed stat sheets

--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -8,20 +8,20 @@
 
     <div style="padding: 1em;">
 
-        <h3>South Florida, It's Week #3!</h3>
+        <h3>Jerseys are in, and welcome to Week #4!</h3>
 
         <p>Hello everyone,</p>
-
-        <p>One final week to see where the teams lie! As a reminder, please be sure to bring a light and dark shirt and your own water.</p>
         
-        <p>We hope jerseys to be ready by next week, we'll keep you posted.</p>
+        <p>Jerseys are in, so please get there on time so that you can get your jersey (some of you registered late and may not be receiving a jersey, depending on when you signed up.)</p>
         
         <p>As for the games happening today please be there by <strong>7:15pm.</strong>  Games will start at 8pm.</p>
+
         <p>Our games for this week are:</p>
         <ul>
-            <li><strong>Field #2</strong>: The Florida Man vs Vice City</li>
-            <li><strong>Field #4</strong>: Pichelo vs Free Candy</li>
+            <li><strong>Field #2</strong>: Free Candy vs Vice City</li>
+            <li><strong>Field #4</strong>: Pichelo vs The Florida Man</li>
         </ul>
+
         <p>Field #2 and #4 are north of this parking lot.</p>
         <a class="cta" href="https://goo.gl/maps/CP1Gw47qpjuXjKL17">See Field Location</a>
         
@@ -30,7 +30,7 @@
         <a class="cta" href="https://goo.gl/maps/FxkFLcrcrv3eSbeW6">See Flanigan's Location</a>
         
         <p>
-            <em>Please be sure to be on the lookout for any emails in the event of field cancellations, rainouts, or other kinds of notices.</em>
+            <em>Please be sure to be on the lookout for any emails in the event of field cancellations, rain-outs, or other kinds of notices.</em>
         </p>
         
         <p>
