--- a/templates/views/sheets.jade
+++ b/templates/views/sheets.jade
@@ -2,7 +2,9 @@ html
   head
     title South Florida Spring League 2017 Stat Sheet
     link(rel='stylesheet' href='/styles/site.css' media='all')
-    link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed")
+    link(rel="preconnect" href="https://fonts.googleapis.com")
+    link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
+    link(href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet")
     style.
       @page {
           size: auto;
@@ -10,18 +12,22 @@ html
       }
 
       td, th, p {
-        font-size: 0.8em;
+          font-size: 0.8em;
+      }
+      
+      th {
+          letter-spacing: 1px;
       }
       
       th {
           font-weight: 800;
-          font-family: Helvetica, sans-serif;
+          font-family: "Roboto Condensed", sans-serif;
           text-transform: uppercase;
           background: #e9e9e9;
       }
 
       .table-bordered, .table-bordered td, .table-bordered th {
-        border: 1px solid #4a4a4a !important;
+        border: 1px solid #989898 !important;
       }
 
       .logo {
@@ -29,33 +35,32 @@ html
         float: right;
         margin-top: 1em;
       }
+        
+      strong {
+        font-weight: 800;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+      }
 
   body(ng-app='StatSheetApp')
 
     .container(ng-controller='StatSheetController')
 
-      section(ng-repeat="team in teams" style='page-break-after: always')
-        .row
-          .col-xs-7
-            header.page-header
-              h1 
-                | Team: {{team.name}} 
-
-
-            table.table.table-bordered.table-striped
-              thead
-                th Team
-                th Score
-              tbody
-                tr
-                  td(style='width: 40%') {{team.name}}
-                  td
-                tr
-                  td(style='width: 40%') Opponent
-                  td
-          .col-xs-5
-            h3 Game Date:
-            //img(src='/images/logo-skyline.png' class='img-responsive logo')
+      section(ng-repeat="team in teams" style='page-break-after: always; margin-top: 20px;')
+        table.table.table-bordered.table-striped
+          thead
+            tr
+              th(style="width: 20%") Game Date
+              th Team
+              th(style="width: 60%") Score
+          tbody
+            tr
+              td(rowspan=2)
+              td <strong>{{team.name}}</strong>
+              td
+            tr
+              td Opponent
+              td
 
         table.table.table-bordered.table-striped
           thead
@@ -67,10 +72,10 @@ html
           tbody
             tr(ng-repeat="player in team.players | orderBy: 'name.first'")
               td(style='width: 20%') {{player.name.first}} {{player.name.last}}
-              td(style='width: 20%')
-              td(style='width: 20%')
-              td(style='width: 20%')
-              td(style='width: 20%')
+              td(style='width: 15%')
+              td(style='width: 15%')
+              td(style='width: 15%')
+              td(style='width: 40%')
 
         p.text-muted
           em Please fill out and return to SFL Ultimate staff.  Stats allow us to determine awards (MVP, assist, score, defensive leaders) for each gender as well as help us resolve seeding for the playoff tournament. Thank you!
