--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -68,7 +68,7 @@ block content
                 .form-group
                     label(for="age") Age (In Years)
                     input#age.input-lg.form-control(type='number' name='age' required)
-                    p.help-block Our insurance policy requires us to let them how many people of certain ages exist in the league
+                    p.help-block Our insurance policy requires us to report how many people within certain age-ranges exist in the league
                     
                 .form-group
                     label(for="skillLevel") Skill Level
