--- a/templates/views/confirmation.jade
+++ b/templates/views/confirmation.jade
@@ -12,6 +12,28 @@ block content
       span Feel free to share the joy of having signed up to play 
       strong=league.title
     div#share.text-center
+  br
+  .container
+    h2 Frequently Asked Questions
+    p
+      strong How will teams be picked and will we have time to practice/get to know each other before the first game?
+    p Teams are picked via a draft. Captains meet right after registration closes and pick teams, trying to balance each team with new and experienced players as well as to make sure teams have an even gender balance.
+    
+    p
+      strong Do people typically wear cleats? If so, what type? If you have recommendations for specific pairs, that would be great since my old ones are toast.
+    p Yes, people wear cleats. Some like soccer cleats, others like lacrosse, and a few wear football cleats, it really just depends on what feels right for your feet.
+    
+    p
+      strong Will there be a schedule released? I know games are on Sundays, but I’m looking for who is playing whom and at what time.
+    p Schedules are released after the draft, because at that point we define how many teams will be playing. Right now we will be close to the boundary between 4 and 6 teams.
+    
+    p
+      strong Regarding COVID, do people typically wear masks when not playing (on the sideline). Just wondering if there are any policies or recommendations to wear masks. Good either way, just want to know what’s expected.
+    p People generally do not wear masks. We do ask however that if you are sick or not feeling well to let your captains know and not attend for risk of impacting others.
+
+    p
+      strong Is there anything else I should know as a new person starting in this league?
+    p If possible try to play some pick up before attending league so that you can get a feel for how people play. That will give you a feel of how people play in the area. If you are not sure on where to find pick up, then visit https://www.sflultimate.com/community. I also recommend that you skim through the rules as they sometimes change https://usaultimate.org/rules/. Note that even experienced players forget to check these rules, but knowledge of them helps clear up awkward confusions, and allows you to make confident assessments of what happens during a foul.
 
   script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jsSocials/1.5.0/jssocials.min.js")
