fixed links on confirmation

--- a/templates/views/confirmation.jade
+++ b/templates/views/confirmation.jade
@@ -33,7 +33,7 @@ block content
 
     p
       strong Is there anything else I should know as a new person starting in this league?
-    p If possible try to play some pick up before attending league so that you can get a feel for how people play. That will give you a feel of how people play in the area. If you are not sure on where to find pick up, then visit https://www.sflultimate.com/community. I also recommend that you skim through the rules as they sometimes change https://usaultimate.org/rules/. Note that even experienced players forget to check these rules, but knowledge of them helps clear up awkward confusions, and allows you to make confident assessments of what happens during a foul.
+    p If possible try to play some pick up before attending league so that you can get a feel for how people play. That will give you a feel of how people play in the area. If you are not sure on where to find pick up, then visit <a href="https://www.sflultimate.com/community" target="_blank">https://www.sflultimate.com/community</a>. I also recommend that you skim through the rules as they sometimes change <a href="https://usaultimate.org/rules/" target="_blank">https://usaultimate.org/rules/</a>. Note that even experienced players forget to check these rules, but knowledge of them helps clear up awkward confusions, and allows you to make confident assessments of what happens during a foul.
 
   script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jsSocials/1.5.0/jssocials.min.js")
