--- a/templates/views/schedule.jade
+++ b/templates/views/schedule.jade
@@ -32,10 +32,10 @@ block content
               span(ng-if="game.homeTeamScore && game.awayTeamScore") ({{game.homeTeamScore}}-{{game.awayTeamScore}})
             td {{locations[game.location] ? locations[game.location].name: 'TBD'}}
           tr(ng-class="(1481518800000 - $parent.today > 0) ? '':'text-muted' ")
-            td Dec 12th
-            td 11:00AM-3:00PM
+            td May 22nd
+            td 11:00AM-5:00PM
             td League Finals
-            td Amelia Earhart Park
+            td Ives Estates Park
 
 block js
   script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js")
