Reorganized routes to allow /pickups in pages

--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -15,6 +15,11 @@
   }
 }
 
+.pickup-listing-page .badge {
+  margin-left: 4px;
+  text-transform: capitalize;
+}
+
 .beach-series-logo {
   max-width: 100%;
   width: 350px;
