--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -28,7 +28,7 @@ block content
           if locals.league
             a.btn.btn-lg.btn-primary(href="/register") Register
           else
-            a.btn.btn-lg.btn-primary(href="/community") Pick Ups
+            a.btn.btn-lg.btn-primary(href="/pickups") Pick Ups
 
   .features
     .container
