--- a/templates/views/sheets.jade
+++ b/templates/views/sheets.jade
@@ -1,29 +1,29 @@
 html
   head
-    title South Florida Spring League 2017 Stat Sheet
+    title South Florida Spring League 2022 Stat Sheet
     link(rel='stylesheet' href='/styles/site.css' media='all')
     link(rel="preconnect" href="https://fonts.googleapis.com")
     link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
     link(href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet")
     style.
       @page {
-          size: auto;
-          margin: 1em;
+        size: auto;
+        margin: 1em;
       }
 
       td, th, p {
-          font-size: 0.8em;
+        font-size: 0.8em;
       }
-      
+
       th {
-          letter-spacing: 1px;
+        letter-spacing: 1px;
       }
-      
+
       th {
-          font-weight: 800;
-          font-family: "Roboto Condensed", sans-serif;
-          text-transform: uppercase;
-          background: #e9e9e9;
+        font-weight: 800;
+        font-family: "Roboto Condensed", sans-serif;
+        text-transform: uppercase;
+        background: #e9e9e9;
       }
 
       .table-bordered, .table-bordered td, .table-bordered th {
@@ -35,7 +35,7 @@ html
         float: right;
         margin-top: 1em;
       }
-        
+
       strong {
         font-weight: 800;
         letter-spacing: 2px;
@@ -44,9 +44,9 @@ html
 
   body(ng-app='StatSheetApp')
 
-    .container(ng-controller='StatSheetController')
+    .container-fluid(ng-controller='StatSheetController')
 
-      section(ng-repeat="team in teams" style='page-break-after: always; margin-top: 20px;')
+      section(ng-repeat="team in teams" style='page-break-after: always; margin-top: 20px;' ng-if="!isTournament")
         table.table.table-bordered.table-striped
           thead
             tr
@@ -67,7 +67,7 @@ html
               td {{team._id === team.game.homeTeam ? teamMap[team.game.awayTeam] : teamMap[team.game.homeTeam] }}
               td
               td
-              td 
+              td
 
         table.table.table-bordered.table-striped
           thead
@@ -83,6 +83,54 @@ html
               td(style='width: 15%')
               td(style='width: 15%')
               td(style='width: 40%')
+
+      section(ng-repeat="team in teams" style='page-break-after: always; margin-top: 20px;' ng-if="isTournament")
+        table.table.table-bordered.table-striped
+          thead
+            tr
+              th(style="min-width: 90px") Game Date
+              th Team
+              th Scores Game 1
+              th Scores Game 2
+              th Scores Game 3
+          tbody
+            tr
+              td {{today.toLocaleDateString()}}
+              td <strong>{{team.name}}</strong>
+              td
+              td
+              td
+              tr
+              td {{team.game.scheduledTime.toLocaleTimeString()}}
+              td Opponent
+              td
+              td
+              td
+  
+          table.table.table-bordered.table-striped
+            thead
+              th Player Name
+              th G1 Assists
+              th G1 Scores
+              th G1 Defenses
+              th G2 Assists
+              th G2 Scores
+              th G2 Defenses
+              th G3 Assists
+              th G3 Scores
+              th G3 Defenses
+            tbody
+              tr(ng-repeat="player in team.players | orderBy: 'name.first'")
+                td {{player.name.first}} {{player.name.last.charAt(0).toUpperCase()}}.
+                td
+                td
+                td
+                td
+                td
+                td
+                td
+                td
+                td
 
         p.text-muted
           em Please fill out and return to SFL Ultimate staff.  Stats allow us to determine awards (MVP, assist, score, defensive leaders) for each gender as well as help us resolve seeding for the playoff tournament. Thank you!
