--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -19,7 +19,7 @@ block content
         .col-md-6
           h1 Welcome
           p Since 1999, players from Dade & Broward counties unite to grow the awesome sport of Ultimate Frisbee.
-          if locals.league.isRegistrationPeriod
+          if locals.league && locals.league.isRegistrationPeriod
             p Be sure to sign up for our #{locals.league.title}
           else
             p We're working on our next league, while we wait go check out your local pick ups!
@@ -48,7 +48,7 @@ block content
           h3 Ladies Welcome
           p Our league is co-ed, and is always excited to invite new lady players!
 
-    if locals.standings
+    if locals.league && locals.standings
       .container
         hr
         .row
