dummy change to triger upgrading to heroku-22 stack

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -42,7 +42,7 @@ block content
         article.col-sm-4.text-center
           i.fa.fa-trophy.fa-4x
           h3 Play Ultimate
-          p We have 10 regular season games and our final playoff tournament
+          p We have 8-10 regular season games and one final playoff tournament!
         article.col-sm-4.text-center
           i.fa.fa-female.fa-4x
           h3 Ladies Welcome
