Refactoring to shared utility

--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -168,6 +168,7 @@ html(lang='en')
       })();
 
     //- Include template-specific javascript files by extending the js block
+    script(src='/js/utils.js')
     block js
 
     script.
